# cubic-spline

./: CMakeLists.txt  des.txt  octave-workspace  ori.txt  plot_dual.m  plot_dual_quat.m  plot_rot.m  quaternion.txt  rotmat.txt
include/: child.h  trajectory.h
src/: cubicSpline.cpp
